# gsv_supervised

./: .gitignore  .gitmodules  README.md  ope.py  pyproject.toml
artifacts/: svname.html
patch/: geo_sampling.patch
src/: fetch_img.py  generate_factors.py  inference.py  settings.py  visualize.py  visualize_grid.py
